--- a/app/src/main/res/drawable/button_style_one.xml
+++ b/app/src/main/res/drawable/button_style_one.xml
@@ -6,6 +6,6 @@
         android:color="@color/black" />
     <corners android:radius="10dp" />
     <gradient
-        android:startColor="#7FFFD4"
-        android:endColor="#246EE9" />
+        android:endColor="#246EE9"
+        android:startColor="#7FFFD4" />
 </shape>
