--- a/app/src/main/res/drawable/grey_background_circle.xml
+++ b/app/src/main/res/drawable/grey_background_circle.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="oval">
             <solid android:color="@android:color/transparent" />
-            <stroke android:color="@color/silver" android:width="2dp" />
+            <stroke android:width="2dp" android:color="@color/silver" />
             <size android:width="40dp" android:height="40dp" />
 
         </shape>
