--- a/app/src/main/res/drawable/ic_baseline_send_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_send_24.xml
@@ -1,10 +1,10 @@
-<vector android:autoMirrored="true"
-    android:height="24dp"
-    android:tint="#FFFFFF"
-    android:viewportHeight="24"
-    android:viewportWidth="24"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:height="24dp"
+    android:autoMirrored="true"
+    android:tint="#FFFFFF"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
         android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z" />
