--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,16 @@
         tools:context=".MainActivity">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:theme="@style/Theme.MindMeld.AppBarOverlay">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
                 android:background="@drawable/toolbar_bg"
-                app:popupTheme="@style/Theme.MindMeld.PopupOverlay"
-                android:layout_height="?attr/actionBarSize" />
+                app:popupTheme="@style/Theme.MindMeld.PopupOverlay" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
