--- a/app/src/main/res/layout/activity_messaging.xml
+++ b/app/src/main/res/layout/activity_messaging.xml
@@ -2,15 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent_viewgroup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MessagingActivity"
-    android:id="@+id/parent_viewgroup">
+    tools:context=".MessagingActivity">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/msg_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/msg_toolbar"
         android:background="?attr/colorPrimary">
 
         <RelativeLayout
@@ -24,24 +24,24 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="-14dp"
+                android:contentDescription="UserProfilePicture"
                 android:padding="3dp"
-                android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
-                android:contentDescription="UserProfilePicture" />
+                android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/parent_image_view"
                 android:layout_width="44dp"
                 android:layout_height="44dp"
                 android:layout_margin="5dp"
                 android:layout_toRightOf="@+id/back_btn"
-                android:id="@+id/parent_image_view"
                 app:cardCornerRadius="22dp">
 
                 <ImageView
-                    android:layout_height="44dp"
-                    android:layout_width="wrap_content"
                     android:id="@+id/profile_pic_imageview"
-                    android:src="@drawable/user"
-                    android:scaleType="centerCrop" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/user" />
             </androidx.cardview.widget.CardView>
 
             <TextView
@@ -49,8 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="6dp"
-                android:maxLines="1"
                 android:layout_toRightOf="@+id/parent_image_view"
+                android:maxLines="1"
                 android:padding="5dp"
                 android:text="username"
                 android:textSize="18dp" />
@@ -71,22 +71,22 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/typing_space_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:outlineProvider="none"
+        android:layout_alignParentBottom="true"
         android:layout_margin="5dp"
         android:layout_toLeftOf="@+id/send_btn_parent"
-        android:layout_alignParentBottom="true"
-        app:cardCornerRadius="22dp"
-        android:id="@+id/typing_space_parent">
+        android:outlineProvider="none"
+        app:cardCornerRadius="22dp">
 
         <EditText
+            android:id="@+id/typing_space"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:maxHeight="100dp"
-            android:id="@+id/typing_space"
             android:background="@android:color/transparent"
             android:hint="Enter message"
+            android:maxHeight="100dp"
             android:paddingVertical="10dp"
             android:paddingStart="20dp" />
 
@@ -96,22 +96,22 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/send_btn_parent"
         android:layout_width="44dp"
         android:layout_height="44dp"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="22dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:id="@+id/send_btn_parent">
+        android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="22dp">
 
         <ImageView
-            android:layout_height="44dp"
-            android:layout_width="44dp"
             android:id="@+id/send_msg_btn"
-            android:padding="10dp"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
             android:background="?attr/colorSecondary"
-            android:src="@drawable/ic_baseline_send_24"
-            android:scaleType="centerCrop" />
+            android:padding="10dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_baseline_send_24" />
     </androidx.cardview.widget.CardView>
 
 
