--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="70dp">
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/parent_image_view"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:layout_centerVertical="true"
-        android:id="@+id/parent_image_view"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="10dp"
         app:cardCornerRadius="25dp">
 
         <ImageView
-            android:layout_height="50dp"
-            android:layout_width="wrap_content"
             android:id="@+id/profile_pic_imageview"
-            android:src="@drawable/user"
-            android:scaleType="centerCrop" />
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/user" />
     </androidx.cardview.widget.CardView>
 
     <TextView
@@ -47,13 +47,13 @@
 
 
     <TextView
+        android:id="@+id/recent_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/recent_time"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:text="00:00"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:text="00:00" />
 
 
 </RelativeLayout>
