--- a/app/src/main/res/layout/notification2sample.xml
+++ b/app/src/main/res/layout/notification2sample.xml
@@ -47,9 +47,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Just Now"
+        android:textColor="@color/textColor"
         app:layout_constraintStart_toStartOf="@+id/notification"
-        app:layout_constraintTop_toBottomOf="@+id/notification"
-        android:textColor="@color/textColor" />
+        app:layout_constraintTop_toBottomOf="@+id/notification" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
